.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:03:02 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
Finished building: ../src/demo.cpp
 
Building file: ../src/texture.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/texture.d" -MT"src/texture.o" -o "src/texture.o" "../src/texture.cpp"
Finished building: ../src/texture.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
13:03:08 **** Incremental Build of configuration Debug for project final cg ****
make all 
make: Nothing to be done for 'all'.
13:16:49 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
../src/demo.cpp: In function ‘void drawSkybox(float)’:
../src/demo.cpp:61:2: error: ‘skybox’ was not declared in this scope
  skybox.bind(0);
  ^
make: *** [src/demo.o] Error 1
src/subdir.mk:36: recipe for target 'src/demo.o' failed
13:17:27 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
Finished building: ../src/demo.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
13:17:59 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
Finished building: ../src/demo.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
13:19:13 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
Finished building: ../src/demo.cpp
 
Building file: ../src/texture.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/texture.d" -MT"src/texture.o" -o "src/texture.o" "../src/texture.cpp"
Finished building: ../src/texture.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
13:20:08 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/texture.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/texture.d" -MT"src/texture.o" -o "src/texture.o" "../src/texture.cpp"
Finished building: ../src/texture.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
13:23:03 **** Incremental Build of configuration Debug for project final cg ****
make all 
Building file: ../src/demo.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -I"/home/davi/Documentos/UFC/CG/cgTests/final cg/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/demo.d" -MT"src/demo.o" -o "src/demo.o" "../src/demo.cpp"
../src/demo.cpp: In function ‘void myPassiveMotionFunc(int, int)’:
../src/demo.cpp:43:8: warning: unused variable ‘posx’ [-Wunused-variable]
  float posx = remap(x,0.0f,600.0f, -2.0f, 2.0f);
        ^
../src/demo.cpp:44:8: warning: unused variable ‘posy’ [-Wunused-variable]
  float posy = remap(y,0.0f,600.0f, 2.0f, -2.0f);
        ^
Finished building: ../src/demo.cpp
 
Building target: final cg
Invoking: GCC C++ Linker
g++  -o "final cg"  ./src/camera.o ./src/demo.o ./src/indexedmesh.o ./src/mesh.o ./src/rawmesh.o ./src/texture.o ./src/toyparser.o  ./include/glm/detail/glm.o   -lGL -lGLU -lglut -lSOIL
Finished building target: final cg
 
